--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -11,6 +11,7 @@
 			<li><%= link_to t("header.profile"), current_user %></li>
 			<%if current_user.admin? %>
 				<li><%= link_to t("header.users"), users_path %></li>
+				<li><%= link_to t("header.switches"), switches_path %></li>
 			<%end%>
 		<% else %>
 			<li><%= link_to t("header.signin"), signin_path %></li>
