--- a/app/views/switches/_switch_form.html.erb
+++ b/app/views/switches/_switch_form.html.erb
@@ -6,6 +6,9 @@
 		<%= f.label :description%>
 		<%= f.text_field :description %>
 		<br>
+		<%= f.label :ip%>
+		<%= f.text_field :ip %>
+		<br>
 		<%= submit_tag "save"%>
 	<%end%>
 
