--- a/app/views/switches/index.html.erb
+++ b/app/views/switches/index.html.erb
@@ -1,10 +1,17 @@
 <h1>Switch#index</h1>
 <%= link_to "add switch", new_switch_path %>
 <table class="switches">
+	<th>name</th>
+	<th>decription</th>
+	<th>ip</th>
+	<th>ports</th>
+	<th>action</th>
 	<% @switches.each do |s| %>
 		<tr>
 		<td><%= s.name %></td>
 		<td><%= s.description %></td>
+		<td><%= s.ip %></td>
+		<td><%= s.switchports.count %></td>
 		<td><%= link_to "edit", edit_switch_path(s) %></td>
 	</tr>
 <%end%>
